# OpenBoss

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
.github/workflows/: check.yml
agent_automation_system/: README.md  __init__.py  test.txt
agent_automation_system/cli/: __init__.py  claude_code_cli.py  (+2 more)
app/: main.py  websocket.py
docs/: AgentCommander_PRD.docx  OpenBoss_PRD.html  P3-delivery-report.md  TASK_BREAKDOWN.md  初版.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
harness/: api-rules.md  dev-rules.md  main-rules.md  pm-rules.md  qa-rules.md  sub-rules.md  validate-rules.md
scripts/: init_dirs.py
tests/: conftest.py  test_git_manager.py  test_log_manager.py  test_memory_manager.py  test_p1_041_result_detector.py  test_p1_042_timeout_controller.py  test_p1_043_sub_agent.py  test_p1_044_master_agent.py  test_p1_045_master_agent_startup.py  test_p1_046_dag.py  test_p1_047_select_next_task.py  test_p1_048_agent_factory.py  test_p1_049_main_loop.py  test_p1_050_failure_handler.py  test_p1_051_restore_progress.py  test_p1_052_dag_scenarios.py  test_p1_053_scheduling_strategy.py  test_p1_054_restore_checkpoint_scenarios.py  test_p1_055_main_rules.py  test_p1_056_sub_rules.py  test_p1_057_validate_rules.py  test_p1_058_pm_rules.py  test_p1_059_dev_rules.py  test_p1_060_qa_rules.py  test_p1_061_e2e_smoke.py  test_p1_062_tmux_cli_integration.py  test_p1_063_file_system_state_flow.py  test_p1_064_git_commit_flow.py  test_p2_001_pm_agent.py  test_p2_002_refine_requirement.py  test_p2_003_communicate_with_user.py  test_p2_004_decompose_requirement.py  test_p2_005_generate_task_json.py  test_p2_006_generate_test_script.py  test_p2_007_pm_agent_scenarios.py  test_p2_008_dev_agent.py  test_p2_009_analyze_task.py  test_p2_010_write_tests.py  test_p2_011_implement_and_run.py  test_p2_012_build_commit_message.py  (+38 more)
(+124 files in other folders)
