[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openboss"
version = "0.1.0"
description = "主从架构分布式 Agent 自动化执行系统"
readme = "agent_automation_system/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenBoss Team"},
]
keywords = ["agent", "automation", "tmux", "distributed", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "libtmux>=0.23.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.40",
    "psutil>=5.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
openboss = "agent_automation_system.cli:main"

[tool.setuptools.packages.find]
include = ["agent_automation_system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
